Add: introduce Docker configuration, environment files, and update proto definitions for payment processing

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "protos"]
 	path = protos
 	url = https://github.com/vogiaan1904/e-commerce-grpc-nest-proto.git
+[submodule "protos-submodule"]
+	path = protos-submodule
+	url = https://github.com/vogiaan1904/e-commerce-grpc-nest-proto.git
